# robotdog

./: .gitignore  INTEGRATION_COMPLETE.md  README.md  ROBOT_VIDEO_INTEGRATION.md  main.py  pyproject.toml  robot_bridge.py  simple_posture_with_image_test.py  sit_down_test.py  test_audio.py  test_robot_integration.py
docs/: QUICKSTART.md  README.md  ROBOT_CAMERA_DISPLAY.md  project_presentation_script.md
full_audio/: .env.example  README.md  gemini_live.py  main.py  requirements.txt
full_audio/frontend/: index.html  main.js  style.css
src/: __init__.py  depth_estimator.py  detector.py  navigator.py  sniffer.py  stand.py  state_tracker.py
